fix typing on mobile

--- a/assets/styles/home.styl
+++ b/assets/styles/home.styl
@@ -32,7 +32,9 @@
   text-align left
   @media only screen and (max-width: mobileMaxWidth)
     margin-bottom 0
+    display block
     text-align center
+    width auto
   &:after
     -webkit-animation cursor-blink 0.8s linear infinite
     -moz-animation cursor-blink 0.8s linear infinite
